[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scenes/MainSession/MainSession.gd" type="Script" id=1]
[ext_resource path="res://Scenes/MainSession/PointCounter.tscn" type="PackedScene" id=2]
[ext_resource path="res://Fonts/Font_Regular20.tres" type="DynamicFont" id=3]
[ext_resource path="res://Scenes/MainSession/Office.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Buttons/MM_Button.tscn" type="PackedScene" id=5]
[ext_resource path="res://Sprites/UI/buttonLongPressed.png" type="Texture" id=6]
[ext_resource path="res://Sprites/UI/buttonLong.png" type="Texture" id=7]
[ext_resource path="res://Sprites/UI/energyMeter.png" type="Texture" id=8]
[ext_resource path="res://Sprites/UI/greenMeter.png" type="Texture" id=9]
[ext_resource path="res://Scenes/HUD/Header.tscn" type="PackedScene" id=10]
[ext_resource path="res://Fonts/Font_Regular24.tres" type="DynamicFont" id=11]

[node name="MainSession" type="Node2D"]
script = ExtResource( 1 )

[node name="HeaderCanvasLayer" type="CanvasLayer" parent="."]

[node name="Header" parent="HeaderCanvasLayer" instance=ExtResource( 10 )]

[node name="CenterContainer" type="CenterContainer" parent="HeaderCanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 80.0

[node name="Main" type="VBoxContainer" parent="HeaderCanvasLayer/CenterContainer"]
margin_left = 64.0
margin_right = 576.0
margin_bottom = 560.0
rect_min_size = Vector2( 512, 560 )
size_flags_horizontal = 0
size_flags_vertical = 0
custom_constants/separation = 0

[node name="NameRow" type="Control" parent="HeaderCanvasLayer/CenterContainer/Main"]
margin_right = 512.0
margin_bottom = 38.0
rect_min_size = Vector2( 0, 38 )
size_flags_vertical = 0

[node name="ProductName" type="Label" parent="HeaderCanvasLayer/CenterContainer/Main/NameRow"]
margin_left = -40.0
margin_top = 2.0
margin_right = 552.0
margin_bottom = 36.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 11 )
text = "Awesome product"
align = 1
valign = 1
autowrap = true

[node name="CounterRow" type="Control" parent="HeaderCanvasLayer/CenterContainer/Main"]
margin_top = 38.0
margin_right = 512.0
margin_bottom = 116.0
rect_min_size = Vector2( 0, 78 )
size_flags_vertical = 0

[node name="FitCounter" parent="HeaderCanvasLayer/CenterContainer/Main/CounterRow" instance=ExtResource( 2 )]
margin_left = 42.0
margin_top = 2.0
margin_right = 144.0
margin_bottom = 21.0

[node name="DevCounter" parent="HeaderCanvasLayer/CenterContainer/Main/CounterRow" instance=ExtResource( 2 )]
margin_left = 200.0
margin_top = 2.0
margin_right = 302.0
margin_bottom = 21.0

[node name="MarketCounter" parent="HeaderCanvasLayer/CenterContainer/Main/CounterRow" instance=ExtResource( 2 )]
margin_left = 358.0
margin_top = 2.0
margin_right = 460.0
margin_bottom = 21.0

[node name="ViewportRaw" type="Control" parent="HeaderCanvasLayer/CenterContainer/Main"]
margin_top = 116.0
margin_right = 512.0
margin_bottom = 484.0
rect_min_size = Vector2( 0, 368 )
size_flags_vertical = 0

[node name="Office" parent="HeaderCanvasLayer/CenterContainer/Main/ViewportRaw" instance=ExtResource( 4 )]
position = Vector2( 256, 184 )

[node name="ActionsRaw" type="Control" parent="HeaderCanvasLayer/CenterContainer/Main"]
margin_top = 484.0
margin_right = 512.0
margin_bottom = 542.0
rect_min_size = Vector2( 0, 58 )
size_flags_vertical = 0

[node name="Team_Button" parent="HeaderCanvasLayer/CenterContainer/Main/ActionsRaw" instance=ExtResource( 5 )]
margin_left = -6.0
margin_top = 7.0
margin_right = 166.0
margin_bottom = 61.0
icon = ExtResource( 7 )
buttonText = "TEAM"
sPressed = ExtResource( 6 )
sReleased = ExtResource( 7 )

[node name="Actions_Button" parent="HeaderCanvasLayer/CenterContainer/Main/ActionsRaw" instance=ExtResource( 5 )]
margin_left = 346.0
margin_top = 7.0
margin_right = 518.0
margin_bottom = 61.0
icon = ExtResource( 7 )
buttonText = "ACTIONS"
sPressed = ExtResource( 6 )
sReleased = ExtResource( 7 )

[node name="Project_Button" parent="HeaderCanvasLayer/CenterContainer/Main/ActionsRaw" instance=ExtResource( 5 )]
margin_left = 170.0
margin_top = 7.0
margin_right = 342.0
margin_bottom = 61.0
icon = ExtResource( 7 )
buttonText = "PROJECT"
sPressed = ExtResource( 6 )
sReleased = ExtResource( 7 )

[node name="ProjectProgress" type="TextureProgress" parent="HeaderCanvasLayer/CenterContainer/Main/ActionsRaw"]
margin_left = 176.0
margin_top = 10.0
margin_right = 336.0
margin_bottom = 58.0
texture_under = ExtResource( 8 )
texture_progress = ExtResource( 9 )
nine_patch_stretch = true
stretch_margin_left = 4
stretch_margin_top = 4
stretch_margin_right = 4
stretch_margin_bottom = 6

[node name="ProjectProgressLabel" type="Label" parent="HeaderCanvasLayer/CenterContainer/Main/ActionsRaw/ProjectProgress"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 3 )
text = "99/9999"
align = 1
valign = 1

[node name="ActionProgress" type="TextureProgress" parent="HeaderCanvasLayer/CenterContainer/Main/ActionsRaw"]
visible = false
margin_left = 352.0
margin_top = 10.0
margin_right = 512.0
margin_bottom = 58.0
texture_under = ExtResource( 8 )
texture_progress = ExtResource( 9 )
nine_patch_stretch = true
stretch_margin_left = 4
stretch_margin_top = 4
stretch_margin_right = 4
stretch_margin_bottom = 6

[node name="ActionProgressLabel" type="Label" parent="HeaderCanvasLayer/CenterContainer/Main/ActionsRaw/ActionProgress"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 3 )
text = "99/9999"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true
}

[connection signal="buttonPressed" from="HeaderCanvasLayer/CenterContainer/Main/ActionsRaw/Team_Button" to="." method="_on_Team_Button_buttonPressed"]
[connection signal="buttonPressed" from="HeaderCanvasLayer/CenterContainer/Main/ActionsRaw/Actions_Button" to="." method="_on_Actions_Button_buttonPressed"]
[connection signal="buttonPressed" from="HeaderCanvasLayer/CenterContainer/Main/ActionsRaw/Project_Button" to="." method="_on_Project_Button_buttonPressed"]
